# system-design-hw

./: README.md  docker-compose.yml  test.py
mysql-db/: init.sql
poco-rest-app/: CMakeLists.txt  Dockerfile  main.cpp  tests.cpp
poco-rest-app/http_server/: HttpServer.cpp  HttpServer.h  RequestHandler.cpp  RequestHandler.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h
poco-rest-app/http_server/amqp/: AmqpConfig.cpp  AmqpConfig.h  AmqpConsumer.cpp  AmqpConsumer.h
poco-rest-app/http_server/database/: Cache.cpp  Cache.h  Database.cpp  Database.h  PersonScheme.cpp  PersonScheme.h
poco-rest-app/http_server/handlers/: NotFound.cpp  NotFound.h  Person.cpp  Person.h
proxysql/: proxysql.cnf
